--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Class-Trait
-version: 0.10
+version: 0.11
 author:
   - Curtis "Ovid" Poe <ovid@cpan.org>
 abstract: An implementation of Traits in Perl
@@ -9,11 +9,12 @@ resources:
   license: http://dev.perl.org/licenses/
 requires:
   File::Spec: 0
-  Test::More: 0.47
+  Test::Differences: 0.47
+  Test::Simple: 0.62
 provides:
   Class::Trait:
     file: lib/Class/Trait.pm
-    version: 0.10
+    version: 0.11
   Class::Trait::Base:
     file: lib/Class/Trait/Base.pm
     version: 0.05
