--- a/META.yml
+++ b/META.yml
@@ -1,39 +1,8 @@
----
+--- #YAML:1.0
 name: Class-Trait
-version: 0.21
+version: 0.22
 author:
   - 'Curtis "Ovid" Poe <ovid@cpan.org>'
-abstract: An implementation of Traits in Perl
+abstract: "An implementation of Traits in Perl"
 license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  File::Spec: 0
-  Test::Differences: 0.47
-  Test::Simple: 0.62
-provides:
-  Class::Trait:
-    file: lib/Class/Trait.pm
-    version: 0.21
-  Class::Trait::Base:
-    file: lib/Class/Trait/Base.pm
-    version: 0.05
-  Class::Trait::Config:
-    file: lib/Class/Trait/Config.pm
-    version: 0.05
-  Class::Trait::Reflection:
-    file: lib/Class/Trait/Reflection.pm
-    version: 0.05
-  TComparable:
-    file: lib/Class/Trait/Lib/TComparable.pm
-    version: 0.01
-  TEquality:
-    file: lib/Class/Trait/Lib/TEquality.pm
-    version: 0.03
-  TPrintable:
-    file: lib/Class/Trait/Lib/TPrintable.pm
-    version: 0.01
-generated_by: Module::Build version 0.2805
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+generated_by: Module::Build version 0.2704, without YAML.pm
